# slam_practice

./: README.md
ch10/ceres_custombundle/: SnavelyReprojectionError.h  ceresBundle.cpp  ceres_custombundle.kdev4
ch10/g2o_custombundle/: g2o_bal_class.h  g2o_bundle.cpp
ch11/pose_graph_g2o_SE3/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_SE3.kdev4
ch11/pose_graph_g2o_lie_algebra/: CMakeLists.txt  pose_graph_g2o_lie_algebra.cpp  pose_graph_g2o_lie_algebra.kdev4  result_lie.g2o
ch11/pose_graph_gtsam/: CMakeLists.txt  pose_graph_gtsam.cpp  pose_graph_gtsam.kdev4
ch12/feature_training/: CMakeLists.txt  feature_training.cpp
ch12/loop_closure/: CMakeLists.txt  loop_closure.cpp
ch13/dense_RGBD/: dense_RGBD.kdev4  octomap_mapping.cpp  pointcloud_mapping.cpp
ch13/dense_mapping/: CMakeLists.txt  dense_mapping.cpp  dense_mapping.kdev4
ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  useHello.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
ch5/joinMap/: CMakeLists.txt  joinMap.cpp
ch6/ceres_curve_fitting/: CMakeLists.txt  main.cpp
ch6/g2o_curve_fitting/: CMakeLists.txt  main.cpp
ch7/feature_match/: CMakeLists.txt  feature_extraction.cpp
ch7/pose_2d2d/: CMakeLists.txt  pose_estimation_2d2d.cpp  pose_estimation_2d2d.cpp~
ch7/pose_3d2d/: CMakeLists.txt  pose_estimation_3d2d.cpp
ch7/pose_3d3d/: CMakeLists.txt  pose_estimation_3d3d.cpp
ch7/triangulation/: CMakeLists.txt  triangulation.cpp
ch8/direct_sparse/: CMakeLists.txt  (+1 more)
(+34 files in other folders)
